# OpenTelemetry_playground

./: Dockerfile  docker-compose.yml  main.py  pyproject.toml  requirements.txt
alloy/: config.alloy
app/: main.py
